tdf#125267: relax the requirement of fixed value of current filter

In a filepicker, user can select any file filter ('All files' for
example) and still choose to open .odb file. Specific UIName of
the current filter ('ODF Database' in this case) shouldn't therefore
be a hard requirement, the correct file extension is enough.

Change-Id: I641a267c545c66aa4d34954922783cc5ff7efd24
Reviewed-on: https://gerrit.libreoffice.org/72377
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>